Update lambda url

--- a/dos-gdc-lambda-12-2017.ipynb
+++ b/dos-gdc-lambda-12-2017.ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "from ga4gh.dos.client import Client\n",
-    "local_client = Client('https://r7r891n750.execute-api.us-west-2.amazonaws.com/api/')"
+    "local_client = Client('https://wfzf7mc8i2.execute-api.us-west-2.amazonaws.com/api/')"
    ]
   },
   {
